@startuml
left to right direction
abstract class OutputAudio{
    - {static} sourcePort
    - {static} socketOutgoing : DatagramSocket
    - {static} <i>volatile</i> active : boolean
    --
    + {static} void setSourcePort(int newValue)
    + {static} boolean isRunning()
    + {static} void setRunning(boolean newValue)
    --
    + {static} void sendAudio(byte[] toSend)
}

class AudioThread{
    - {static} sourcePort = 4070 : int
    - {static} socketIncoming : DatagramSocket
    --
    + {static} DatagramSocket getSocketIncoming()
    --
    + @Override void run()
}

class AudioSinusoidalThread{
    - {static} FREQUENCY = 200 : double
    - {static} AMPLITUDE = 4000 : double
    --
    + {static} double getFrequency()
    + {static} double getAmplitude()
    + {static} double setFrequency()
    + {static} double setAmplitude()
    --
    + @Override void run()
}

class AudioFileThread{
    @ Override void run()
}

class RTPPacket{
}

AudioThread *-- OutputAudio
AudioSinusoidalThread *-- OutputAudio
AudioFileThread *-- OutputAudio
OutputAudio *-- RTPPacket

@enduml